# xkg-desktop

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build-installers.yml  pr-check.yml  release.yml
docs/: INSTALLATION.md  SYNC.md
public/: capture.html
src/: App.svelte  Capture.svelte  Graph.svelte  Settings.svelte  Sync.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  shortcuts.rs  sync_command.rs  xkg.rs
src-tauri/tests/: sync_command.rs  xkg_smoke.rs
src-tauri/tests/fixtures/: chatgpt_sample.html
