[package]
name = "xkg-desktop"
version = "0.1.0"
description = "XKG Desktop — global shortcut capture for the X Knowledge Graph"
authors = ["you"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
chrono = "0.4"
xkg-core = { path = "/home/x2/.openclaw/workspace/xkg-core" }
url = "2.5"
# Sync command deps (Phase 4): ULID for device_id, sha2 for derive_key,
# hex for the local token digest.
ulid = "1.1"
sha2 = "0.10"
hex = "0.4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3.10"
# In-test mock HTTP transport for the sync round-trip test.
httpmock = "0.7"
